# PoE2GameHelper

./: .gitignore  .gitmodules  .mcp.json  AtlasData.ahk  AutoFlask.ahk  AutoPilot.ahk  AvoidZones.ahk  BridgeDispatch.ahk  CLAUDE.md  CONTRIBUTING.md  CombatAutomation.ahk  ConfigManager.ahk  CustomHotkeys.ahk  CustomHotkeysBindings.ahk  CustomHotkeysBridge.ahk  DEV_README.md  DebugDump.ahk  ErrorLogger.ahk  ExplorationModule.ahk  GgpkMemoryMonitor.ahk  GgpkMemoryMonitorApp.ahk  GgpkToolBridge.ahk  InGameStateMonitor.ahk  ItemSizeRegistry.ahk  JsonFull.ahk  LICENSE  LootPickup.ahk  PROJECT_STATUS.md  PatchChecker.ahk  PatternScanDebug_20260423_040234.csv  PatternScanDemo.ahk  PoE2AtlasReader.ahk  PoE2ComponentDecoders.ahk  PoE2EntityReader.ahk  PoE2InventoryReader.ahk  PoE2MemoryReader.ahk  PoE2Offsets.ahk  PoE2PlayerComponentsReader.ahk  PoE2PlayerReader.ahk  ProcessMemory.ahk  (+18 more)
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
Lib/: TerrainPathfinder.ahk  WebViewToo.ahk
Pages/: index.html
ahk/: AreaInstanceProbe.ahk  AutoFlask.ahk  AutoPilot.ahk  AvoidZones.ahk  BridgeDispatch.ahk  ClickNav.ahk  CombatAutomation.ahk  ConfigManager.ahk  CustomHotkeys.ahk  CustomHotkeysBindings.ahk  DebugOverlay.ahk  EntityAlerts.ahk  EntityFacts.ahk  EntityFocus.ahk  EntityGroups.ahk  ErrorLogger.ahk  ExplorationModule.ahk  FocusOverlay.ahk  GdiOverlayBase.ahk  GgpkMemoryMonitor.ahk  GgpkMemoryMonitorApp.ahk  GgpkToolBridge.ahk  HoverPathfindingProbe.ahk  ItemSizeRegistry.ahk  JsonParser.ahk  LocalApiServer.ahk  LootPickup.ahk  MemoryDiff.ahk  MemoryDissect.ahk  NotificationOverlay.ahk  OffsetCompare.ahk  OverlayContext.ahk  OverlayManager.ahk  PatchChecker.ahk  PatchMaintenance.ahk  PathfindingProbe.ahk  PatternScanDemo.ahk  PlayOverlayPolicy.ahk  PlayerHUD.ahk  PoE2AtlasReader.ahk  (+22 more)
bak/: UiBrowserHandler_orig.ahk  UiTreeBrowser_orig.ahk
context_sets/: DATA.txt  core.txt  ui.txt
data/: animation_enum.json  atlas_biomes.json  atlas_content.json  base_item_name_map.tsv  base_item_sizes.tsv  ggpk_directory_tree.json  inventory_name_map.tsv  inventory_type_map.tsv  map_mod_list.tsv  mod_name_map.tsv  monster_name_map.tsv  raw_stats_debug.tsv  skill_name_map.tsv  stat_desc_map.tsv  stat_name_map.tsv  stat_name_map.tsv.example  unique_item_name_map.tsv  unique_ivi_name_map.tsv  unique_name_map.tsv  world_area_name_map.tsv
dev/: GgpkMemoryMonitorApp.ahk  PatternScanDemo.ahk  SmokeTest.ahk
dx11_overlay/: AHKProducerExample.ahk  CMakeLists.txt  DX11OverlayHook.cpp  DX12OverlayHook.cpp  README.md  RenderQueueBridge.ahk  RenderQueueClient.cpp  RenderQueueShared.h  build_windows.md  build_windows.ps1  inject_windows.md  verify.ps1  verify_build.cmd  verify_build.ps1
dx11_overlay/test_host/: CMakeLists.txt  DX11OverlayTestHost.cpp  DX12OverlayTestHost.cpp  README.md
ggpk-tools/: .gitignore  Directory.Build.props  LICENSE  PoE2Tools.sln  README.md
mcp-server/: README.md  index.js  package.json
tools/: PoE2_Inspector.CT  analyze_shared.py  build_item_names.py  build_item_names_csv.py  build_stat_desc_map.py  build_stat_desc_map_csv.py  compare_offsets.py  debug_strings.py  dump_tables.bat  dump_tables2.bat  explore_stat_descriptions.py  explore_unique_names.py  extract_inventories_dat.py  extract_mods_dat.py  extract_mods_dat_csv.py  extract_monster_names.py  extract_monster_names_csv.py  extract_stats_dat.py  extract_stats_dat_csv.py  extract_stats_dat_old.py  extract_worldareas_dat.py  gen_anim_lookup.py  gen_ct.py  inspect_monsters_dat.py  inspect_monstervarieties_schema.py  inspect_poe2_stats.py  inspect_schema.py  (+11 more)
(+166 files in other folders)
